vlib/v/parser/tests/comptime_unknown_meta_kind_err.vv
enum Test {
	foo
	bar
}

fn test_main() {
	$for item in Test.abcde {
		dump(item)
	}
}
